fixing alignment

--- a/resources/assets/styles/templates/_posts.scss
+++ b/resources/assets/styles/templates/_posts.scss
@@ -16,6 +16,7 @@
 
   .content-wrapper {
     @include makeColumn($size:12, $offset:0);
+    @include makeColumn(md, $size:11, $offset:1);
     @include makeColumn(lg, $size:10, $offset:2);
 
     padding-top: 1.25rem;
@@ -27,11 +28,13 @@
 
   .main {
     @include makeColumn($size:12, $offset:0);
+    @include makeColumn(md, $size:7, $offset:0);
     @include makeColumn(lg, $size:8, $offset:0);
   }
 
   .sidebar-wrapper {
     @include makeColumn($size:12, $offset:0);
+    @include makeColumn(md, $size:4, $offset:0);
     @include makeColumn(lg, $size:4, $offset:0);
 
     margin-top: 7.5rem;
@@ -47,12 +50,12 @@
     max-width: 600px;
 
     @include breakpoint($large) {
-      margin: 0 3rem 0 auto;
+      margin: 0 auto 0 0;
     }
   }
 
   article header {
-    margin-left: -1.5rem;
+    margin-left: -1.85rem;
     margin-right: 3rem;
     border-bottom: 3px solid $bds-light-grey;
   }
